altered footer and added css to faq

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,7 +13,6 @@
 
 header {
     margin: 0;
-
 }
 
 .navbar {
@@ -108,3 +107,7 @@ body {}
 .jac_intro {}
 
 .intro {}
+
+h2, footer {
+  text-align: center;
+}
