Made it to where you are able to run the homepage and faq files to work with Springboot

--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
@@ -50,7 +50,7 @@
   </ol>
 
   <div id="return">
-    <a href="index.html">Return Home</a>
+    <a href="/">Return Home</a>
   </div>
 
   <hr>
