--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,11 +22,11 @@ header {
 }
 
 .nav_list {
-  float: left;
+  float: right;
   list-style: none;
   margin-left: auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .nav_list a:hover {
@@ -38,8 +38,6 @@ header {
 
 .companylogo {
   position: absolute;
-  margin-top: 15px;
-  margin-left: 10px;
   align-self: flex-start;
   padding: 0;
   height: 75px;
@@ -54,7 +52,9 @@ header {
   text-align: center;
 }
 
-.searchbar {}
+.searchbar {
+  padding-right: 10px;
+}
 
 .nav_tours_link {
   width: 100px;
@@ -100,14 +100,86 @@ body {}
 }
 
 .amazon_pic {
-  width: 850px;
-  height: 350px;
-  background-size: cover;
+  width: 100%;
+  height: 850px;
 }
 
-.jac_intro {}
+.intro {
+  text-align: center;
+}
 
-.intro {}
+.middle_container {
+
+}
+
+.bird_part {
+  position: relative;
+  text-align: center;
+  color: var(--white);
+}
+
+.bird_watching {
+position: absolute;
+top: 35%;
+left: 50%;
+transform: translate(-50%, -50%);
+font-size: 70px;
+text-shadow: 5px 5px 10px var(--black);
+}
+
+.bird_pic {
+  width: 650px;
+  height: 450px;
+  transition: transform .2s;
+}
+
+.bird_pic:hover {
+  transform: scale(1.1);
+}
+
+.bird_watching_info {
+  text-align: center;
+}
+
+.bottom_container {
+
+}
+
+.tours_part {
+  justify-content: center;
+  text-align: center;
+}
+
+.tours_heading {
+
+}
+
+.skywalk_pic_link {
+  height: 250px;
+  width: 250px;
+  transition: transform .2s;
+}
+.skywalk_pic_link:hover {
+  transform: scale(1.1);
+}
+
+.riverboat_pic_link {
+  height: 250px;
+  width: 250px;
+  transition: transform .2s;
+}
+.riverboat_pic_link:hover {
+  transform: scale(1.1);
+}
+
+.hiking_pic_link {
+  width: 250px;
+  height: 250px;
+  transition: transform .2s;
+}
+.hiking_pic_link:hover {
+  transform: scale(1.1);
+}
 
 h2, footer {
   text-align: center;
