--- a/src/main/resources/templates/birdTemplate.html
+++ b/src/main/resources/templates/birdTemplate.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>FAQ</title>
 </head>
 <body>
+
+<header>
+    <nav class="navbar">
+        <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
+        <ul class="nav_list">
+            <li class="nav_searchbar">
+                <section class="searchbar"></section>
+            </li>
+            <li><a href="" class="nav_tours_link">Tours</a></li>
+            <li><a href="about.html" class="nav_about_link">About</a></li>
+            <li><a href="faq.html" class="nav_faq_link">Faq</a></li>
+        </ul>
+    </nav>
+</header>
+
+<h2 th:text="${bird.name}">Bird</h2>
+
+<img th:src="@{../images/birds/{name}.jpg(name=${bird.name})}">
+
+<p th:text="${bird.description}">Description</p>
+
+<div id="return">
+    <a href="index.html">Return Home</a>
+</div>
+
+<hr>
+
+<footer>
+    <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
