fixed main controller to make site navigate via address bar, tweaked pathways on tours/index templates to navigate between each other and pull from templates, experimented with populator and models but those still need work

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -72,7 +72,12 @@
       <tr>
         <td><img src="../images/developers/joe.png"></td>
         <td>
-          JOE WRITE YOUR BIO HERE
+          I have a passion and a mind for efficiency in the flow of commodities across
+          the nation, and now for the flow of information across the web: from the actual
+          highways, to the information super-highway. An idyllic world is one where the
+          customer experience is attractive and user-friendly, with the convenience of both
+          mobile applications and the web. Technology should continue to be as accessible and
+          forward-facing, as it is vital and integral to our daily lives.
         </td>
       </tr>
     </table>
