--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,10 +31,10 @@
             <ul class="nav_list">
                 <li class="nav_searchbar">
                 </li>
-                <li><a href="../pages/index.html" class="nav_home_link">Home</a></li>
-                <li><a href="../../templates/toursTemplate.html" class="nav_tours_link">Tours</a></li>
-                <li><a href="../pages/about.html" class="nav_about_link">About</a></li>
-                <li><a href="../pages/faq.html" class="nav_faq_link">Faq</a></li>
+                <li><a href="..//" class="nav_home_link">Home</a></li>
+                <li><a href="../tours" class="nav_tours_link">Tours</a></li>
+                <li><a href="../about" class="nav_about_link">About</a></li>
+                <li><a href="../faq" class="nav_faq_link">Faq</a></li>
             </ul>
         </nav>
     </header>
@@ -84,7 +84,7 @@
     <hr>
 
     <footer>
-        <p>&copy JAC Enterprises | <a href="../pages/terms-and-conditions.html" class="terms_conditions">Terms &
+        <p>&copy JAC Enterprises | <a href="../termsAndConditions" class="terms_conditions">Terms &
                 Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights
             Reserved.</p>
     </footer>
