Functioning birdsTemplate made

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -101,6 +101,11 @@ ul {
   display: inline;
 }
 
+.birds {
+  text-align: center;
+  text-decoration: none;
+}
+
 #return {
   text-align: center;
   padding: 10px;
