--- a/src/main/resources/templates/terms-and-conditions.html
+++ b/src/main/resources/templates/terms-and-conditions.html
@@ -12,6 +12,8 @@
     <title>JAC Enterprises Terms & Conditions</title>
 </head>
 
+<body>
+
 <header>
 
     <nav class="navbar">
@@ -29,15 +31,14 @@
         <ul class="nav_list">
             <li class="nav_searchbar">
             </li>
-            <li><a href="../pages/index.html" class="nav_home_link">Home</a></li>
-            <li><a href="../../templates/toursTemplate.html" class="nav_tours_link">Tours</a></li>
-            <li><a href="../pages/about.html" class="nav_about_link">About</a></li>
-            <li><a href="../pages/faq.html" class="nav_faq_link">Faq</a></li>
+            <li><a href="..//" class="nav_home_link">Home</a></li>
+            <li><a href="../tours" class="nav_tours_link">Tours</a></li>
+            <li><a href="../about" class="nav_about_link">About</a></li>
+            <li><a href="../faq" class="nav_faq_link">Faq</a></li>
         </ul>
     </nav>
 </header>
 
-<body>
     <h1 class="terms_h">Use of the Services</h1>
         <div style="text-align: center">
         <li class="terms_list">By visiting our site and booking a tour from us, you are waiving your legal rights to hold JAC Enterprises accountable for any and all types of injuries and/or death.</li> 
@@ -45,16 +46,16 @@
         <li class="terms_list">This service can delete any content, including your account, they want without reason and without prior notice.</li>
         <li class="terms_list">This service can change the terms at any time at their discretion without notice to the user.</li>
         </div>
-</body>
 
 <div id="return">
     <a href="index.html">Return Home</a>
-  </div>
-  <hr>
+</div>
+<hr>
 
 <footer class="terms_f">
     <p>&copy JAC Enterprises | <a href="../pages/terms-and-conditions.html" class="terms_conditions">Terms &
-            Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights
+        Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights
         Reserved.</p>
 </footer>
+</body>
 </html>
