functioning countriesTemplate created

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -101,9 +101,9 @@ ul {
   display: inline;
 }
 
-.birds {
+.center-list {
   text-align: center;
-  text-decoration: none;
+  list-style: none;
 }
 
 #return {
