got regionTemplate to work and changed template links

--- a/src/main/resources/templates/birdTemplate.html
+++ b/src/main/resources/templates/birdTemplate.html
@@ -22,11 +22,11 @@
     </nav>
 </header>
 
-<h2 th:text="${bird.birdName}">Bird</h2>
+<!--<h2 th:text="${bird.birdName}">Bird</h2>-->
 
-<!--<img th:src="@{../images/birds/{birdName}.jpg(name=${bird.birdName})}">-->
+<!--&lt;!&ndash;<img th:src="@{../images/birds/{birdName}.jpg(name=${bird.birdName})}">&ndash;&gt;-->
 
-<p th:text="${bird.birdDescription}">Description</p>
+<!--<p th:text="${bird.birdDescription}">Description</p>-->
 
 <div id="return">
     <a href="index.html">Return Home</a>
