got countryTemplate to work

--- a/src/main/resources/templates/regionTemplate.html
+++ b/src/main/resources/templates/regionTemplate.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
-    <title>Tour</title>
+    <title>Region</title>
 </head>
 <body>
 
@@ -37,7 +37,7 @@
 
 <h2 th:text="${region.regionName}">Region Name</h2>
 
-<!--<img th:src="@{../images/tours/{name}.jpg(name=${tour.name})}">-->
+<!--<img th:src="@{../images/regions/{name}.jpg(name=${region.name})}">-->
 
 <div id="return">
     <a href="index.html">Return Home</a>
