tourTemplate now working

--- a/src/main/resources/templates/tourTemplate.html
+++ b/src/main/resources/templates/tourTemplate.html
@@ -37,7 +37,7 @@
 
 <h2 th:text="${tour.tourName}">Tour Name</h2>
 
-<!--<p th:text="${tour.tourDescription}">Description</p>-->
+<p th:text="${tour.tourDescription}">Description</p>
 
 <!--<img th:src="@{../images/tours/{name}.jpg(name=${tour.name})}">-->
 
