--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -106,6 +106,15 @@ ul {
   list-style: none;
 }
 
+.center-image {
+  margin: auto;
+  display: block;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
 #return {
   text-align: center;
   padding: 10px;
