added tour photos + added dhana's bio

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -45,7 +45,11 @@
       <tr>
         <td><img src="../images/developers/dhana.png"></td>
         <td>
-          DHANA WRITE YOUR BIO HERE
+          Hi! My name is Dhana P Acharya. I literally started from zero when first started coding in 2020.
+          And, now I have more inclination to coding. My passion for coding has dismantled the world
+          of obstacles that appeared on my way. All I do during my free time is coding or watching video
+          related to coding. I am still crawling though ,but I am sure that one day,my firm determination can
+          lead to walk into the world coding.
         </td>
       </tr>
     </table>
@@ -137,7 +141,7 @@
   </section>
 
   <div id="return">
-    <a href="index.html">Return Home</a>
+    <a href="/">Return Home</a>
   </div>
 
   <hr>
