--- a/src/main/resources/templates/regionTemplate.html
+++ b/src/main/resources/templates/regionTemplate.html
@@ -40,8 +40,10 @@
 <!--<img th:src="@{../images/regions/{name}.jpg(name=${region.name})}">-->
 
 <div id="return">
-    <a href="index.html">Return Home</a>
+    <a href="/">Return Home</a>
 </div>
+
+<hr>
 
 <footer>
     <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
