--- a/src/main/resources/templates/terms-and-conditions.html
+++ b/src/main/resources/templates/terms-and-conditions.html
@@ -48,8 +48,9 @@
         </div>
 
 <div id="return">
-    <a href="index.html">Return Home</a>
+    <a href="/">Return Home</a>
 </div>
+
 <hr>
 
 <footer class="terms_f">
