--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -59,7 +59,7 @@
   </ol>
 
   <div id="return">
-    <a href="index.html">Return Home</a>
+    <a href="/">Return Home</a>
   </div>
   <hr>
   <footer class="terms_f">
