updated tourTemplate info

--- a/src/main/resources/templates/tourTemplate.html
+++ b/src/main/resources/templates/tourTemplate.html
@@ -48,8 +48,9 @@
     </li>
 </ul>
 
-<h4>Country and Habitat:</h4>
+<h4>Country, Region, and Habitat:</h4>
 <p th:text="${tour.tourCountry.countryName}" class="center-text"></p>
+<p th:text="${tour.tourRegion.regionName}" class="center-text"></p>
 <p th:text="${tour.tourHabitat.habitatName}" class="center-text"></p>
 
 <div id="return">
