--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -33,30 +33,24 @@
 </header>
   <h2>FAQ</h2>
 
-  <ol>
+  <ul class="center-list">
       <li>
           <h4>What do I need to bring to a tour?</h4>
-          <p>
               Please bring your tour confirmation ticket along with snacks and water.
               Any special equipment you might need is provided by us, but you are
               welcome to bring your own.
-          </p>
       </li>
       <li>
           <h4>What forms of payment do you accept?</h4>
-          <p>
               We accept all major credit cards, electronic check, and Paypal.
               If you would like to set up a payment plan, please contact us at
               555-555-5555 to connect with a customer service representative.
-          </p>
       </li>
       <li>
           <h4>May I take a bird home with me?</h4>
-          <p>
               No.
-          </p>
       </li>
-  </ol>
+  </ul>
 
   <div id="return">
     <a href="/">Return Home</a>
