--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -40,7 +40,7 @@
   <section class="container">
     <table>
       <th>
-      <td>Dhana Acharya</td>
+      <td clas>Dhana Acharya</td>
       </th>
       <tr>
         <td><img src="../images/developers/dhana.png"></td>
