--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,7 +59,7 @@
     <section class="middle_container">
         <div class="bird_part">
             <p class="bird_watching">Bird Watching</p>
-            <img src="../images/birds/toucan.jpg" alt="" class="bird_pic">
+            <img src="../images/birds/birds.png" alt="" class="bird_pic">
         </div>
         <p class="bird_watching_info">Birdwatching is the recreational observation and study of birds.
             This activity gets millions of people around the world out of doors enjoying wildlife. Like hunting
@@ -70,13 +70,16 @@
 
     <section class="bottom_container">
         <div class="tours_part">
-            <h2 class="tours_heading">Tours We Offer</h2>
-            <!-- <p class="tours_text_over_image">Sky Walk Tour</p> -->
-            <img src="../images/canopywalk.jpg" alt="Picture of Canopy Bridge" class="skywalk_pic_link">
-            <!-- <p class="tours_text_over_image">Riverboat Tour</p> -->
-            <img src="../images/riverhomepgpic.jpg" alt="" class="riverboat_pic_link">
-            <!-- <p class="tours_text_over_image">Hiking Tour</p> -->
-            <img src="../images/hikehomepgpic.jpg" alt="Picture of Forest" class="hiking_pic_link">
+            <h2 class="tours_heading">Tour Photos</h2>
+            <a href="../images/tours/canopywalk.jpg" target="_blank">
+            <img src="../images/tours/canopywalk.jpg" alt="Picture of Canopy Bridge" class="skywalk_pic_link">
+            </a>
+            <a href="../images/tours/riverhomepgpic.jpg" target="_blank">
+            <img src="../images/tours/riverhomepgpic.jpg" alt="" class="riverboat_pic_link">
+            </a>
+            <a href="../images/tours/hikehomepgpic.jpg" target="_blank">
+            <img src="../images/tours/hikehomepgpic.jpg" alt="Picture of Forest" class="hiking_pic_link">
+            </a>
         </div>
     </section>
 
@@ -90,5 +93,4 @@
     </footer>
 
 </body>
-
 </html>
