--- a/src/main/resources/templates/tourTemplate.html
+++ b/src/main/resources/templates/tourTemplate.html
@@ -41,8 +41,8 @@
 
 <p th:text="${tour.tourDescription}" class="center-text">Description</p>
 
-<h4>Birds on this tour:</h4>
 <ul class="center-list">
+    <li><h4>Birds on this tour:</h4></li>
     <li th:each="bird:${tour.tourBirds}">
         <a th:href="@{'/bird/' + ${bird.id}}" th:text="${bird.birdName}" target="_blank">Birds</a>
     </li>
@@ -52,6 +52,8 @@
 <p th:text="${tour.tourCountry.countryName}" class="center-text"></p>
 <p th:text="${tour.tourRegion.regionName}" class="center-text"></p>
 <p th:text="${tour.tourHabitat.habitatName}" class="center-text"></p>
+
+<h5 class="center-text">To reserve a tour, please call us at 555-555-5555</h5>
 
 <div id="return">
     <a href="/">Return Home</a>
